RESOLVED FIXED 257805
REGRESSION (264795@main) Twitter.com: Video blank/black while scrolling
https://bugs.webkit.org/show_bug.cgi?id=257805
Summary REGRESSION (264795@main) Twitter.com: Video blank/black while scrolling
Jer Noble
Reported 2023-06-07 08:13:22 PDT
REGRESSION (264795@main) Twitter.com: Video blank/black while scrolling
Attachments
Jer Noble
Comment 1 2023-06-07 08:13:26 PDT
Jer Noble
Comment 2 2023-06-07 08:20:55 PDT
EWS
Comment 3 2023-06-07 10:54:28 PDT
Committed 264949@main (580bf6c28d2b): <https://commits.webkit.org/264949@main> Reviewed commits have been landed. Closing PR #14740 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.