Cherry-pick 580bf6c28d2b. rdar://problem/110320059

REGRESSION (264795@main) Twitter.com: Video blank/black while scrolling
    https://bugs.webkit.org/show_bug.cgi?id=257805
    rdar://110320059

    Reviewed by Eric Carlson.

    Use videoInlineSize() rather than presentationSize() to determine whether or not a layer should
    be created in MediaPlayerPrivateMediaSourceAVFObjC. And to ensure the layer does get created when
    videoInlineSize() changes, override setVideoInlineSizeFenced() in that class, and call it from
    RemoteMediaPlayerProxy::setVideoInlineSizeFenced().

    * Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.h:
    * Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
    (WebCore::MediaPlayerPrivateMediaSourceAVFObjC::shouldEnsureLayer const):
    (WebCore::MediaPlayerPrivateMediaSourceAVFObjC::setVideoInlineSizeFenced):
    * Source/WebKit/GPUProcess/media/cocoa/RemoteMediaPlayerProxyCocoa.mm:
    (WebKit::RemoteMediaPlayerProxy::setVideoInlineSizeFenced):

    Canonical link: https://commits.webkit.org/264949@main

Canonical link: https://commits.webkit.org/264854.3@safari-7616.1.17-branch