Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.h
@@ -239,6 +239,7 @@ private:
     void notifyActiveSourceBuffersChanged() override;
 
     void setPresentationSize(const IntSize&) final;
+    void setVideoInlineSizeFenced(const FloatSize&, const WTF::MachSendRight&) final;
 
     void updateDisplayLayerAndDecompressionSession();
 
